/gold/about: Fixed missing whitespace.

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -299,7 +299,7 @@ section#about-gold, section#about-gold-partners {
 
         .or {
             font-size: 18px;
-            margin: 0 16px;
+            margin: 0 16px 0 10px;
         }
     }
 
